Multiple dialog locator in progress ...

--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling.razor
@@ -5,4 +5,4 @@
 
 <h3>Dialog Examples Handling</h3>
 
-<AxoDialogLocator DialogId="dialog1" ObservedObjects="new[] {Entry.Plc.Dialogs}"></AxoDialogLocator>
+<AxoDialogLocator DialogLocatorId="dialog1" ObservedObjects="new[] {Entry.Plc.Dialogs}"></AxoDialogLocator>
