--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
@@ -74,6 +74,12 @@
                                     <input type="text" class="form-control" placeholder="Roles" @bind="Origin.Roles">
                                 </div>
                             </div>
+                            <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">Template</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PresentationTemplate">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
