--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/MainLayout.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/MainLayout.razor
@@ -9,13 +9,15 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <AxOpen.Security.Views.LoginDisplay />
         </div>
+
 
         <article class="content px-4">
             @Body
         </article>
 
         <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
+
     </main>
 </div>
