--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
@@ -96,7 +96,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoArraysExamples
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Security">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Security
+            </NavLink>
+        </div>
     </nav>
 </div>
 
