--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="security">
+            <NavLink class="nav-link" href="Security">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Security
             </NavLink>
         </div>
