aditional dialogs for tests

--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
@@ -19,16 +19,29 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="DialogExamplesControl">
-                <span class="oi oi-plus" aria-hidden="true"></span> DialogExamplesControl
+            <NavLink class="nav-link" href="DialogExamplesControl_1">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Control 1
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DialogExamplesControl_2">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Control 2
+            </NavLink>
+        </div>
+
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DialogExamplesHandling_1">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Handling 1
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="DialogExamplesHandling">
-                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Handling
+            <NavLink class="nav-link" href="DialogExamplesHandling_2">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Handling 2
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Simatic-ax">
                 <span class="oi oi-plus" aria-hidden="true"></span> Simatic-AX
