--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
@@ -4,44 +4,43 @@
 @inherits AxoDialogBaseView<AxoDialog>
 @inject AuthenticationStateProvider _asp
 
+<div class="border border-2 rounded">
+    <div class="d-flex align-items-center justify-content-center">
+        @RenderDialogIcon()
+        <h2 class="modal-title m-2">@Component._caption.Cyclic</h2>
+        @RenderDialogIcon()
+    </div>
 
-<ModalDialog @ref="@base.ModalDialog">
-    <HeaderTemplate>
-        <div class="text-center d-flex">
-            @RenderDialogIcon()
-            <h3 class="modal-title m-2 ">@Component._caption.Cyclic</h3>
+    <p>@Component._text.Cyclic</p>
 
-        </div>
-        @if (IsYesNoCancelDialogType())
+    <div class="d-flex justify-content-center ">
+
+        @if (IsOkDialogType())
         {
-            <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close" disabled="@ButtonDisabled()" @onclick="DialogAnswerCancel"> </button>
+            <button type="button" class="btn btn-primary m-2 w-50" disabled=@ButtonDisabled() @onclick="DialogAnswerOk">Ok</button>
+
+        }
+        @if (IsYesNoDialogType() || IsYesNoCancelDialogType())
+        {
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerYes" disabled=@ButtonDisabled()>Yes</button>
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerNo" disabled=@ButtonDisabled()>No</button>
         }
 
-    </HeaderTemplate>
-    <BodyTemplate>
-        <p>@Component._text.Cyclic</p>
-        <div class="d-flex justify-content-center ">
+        @if (IsYesNoCancelDialogType())
+        {
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerCancel" disabled=@ButtonDisabled()>Cancel</button>
+        }
 
-            @if (IsOkDialogType())
-            {
-                <button type="button" class="btn btn-primary m-2 w-50" disabled=@ButtonDisabled() @onclick="DialogAnswerOk">Ok</button>
+    </div>
+    <div>
 
-            }
-            @if (IsYesNoDialogType() || IsYesNoCancelDialogType())
-            {
-                <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerYes" disabled=@ButtonDisabled()>Yes</button>
-                <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerNo" disabled=@ButtonDisabled()>No</button>
-            }
+        @if (!_asp.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+        {
+            <p>You are not authorized, please <a href="Identity/Account/Login">Log In</a>.</p>
+        }
 
-        </div>
-        <div>
-            @if (!_asp.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
-            {
-                <p>You are not authorized, please <a href="Identity/Account/Login">Log In</a>.</p>
-            }
-        </div>
-    </BodyTemplate>
-</ModalDialog>
+    </div>
+</div>
 
 
 
