--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
@@ -3,6 +3,6 @@
 @using AXOpen.Core
 @using AXOpen.Core.Blazor.AxoDialogs
 
-<h3>Dialog Examples Handling 2</h3>
+<h3>Dialog Examples Handling 1 and 2</h3>
 
-<AxoDialogLocator DialogLocatorId="dialog2" ObservedObjects="new[] {Entry.Plc.Dialogs_2}"></AxoDialogLocator>
+<AxoDialogLocator DialogLocatorId="dialog2" ObservedObjects="new [] {Entry.Plc.Dialogs_1, Entry.Plc.Dialogs_2}"></AxoDialogLocator>
