--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
@@ -2,12 +2,12 @@
 
 @if (_dialogProxyService?.DisplayedDialogs.Count() > 0)
 {
-    @if (_showBackdrop)
+    @if (ShowBackdrop)
     {
         <div class="modal-backdrop fade show"></div>
     }
 
-    <div class="modal modal-xl @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay; overflow-y: auto; ">
+    <div class="modal modal-xl @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay; overflow-y: auto; ">
         <div class="modal-dialog mw-100 w-75 modal-dialog-centered" style="align-items: flex-end;" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -23,29 +23,6 @@
             </div>
         </div>
     </div>
-}
-
-@code {
-
-    private string _modalDisplay = "none;";
-    private string _modalClass = string.Empty;
-    private bool _showBackdrop = false;
-
-    public async Task Open()
-    {
-        _modalDisplay = "flex";
-        _modalClass = "show";
-        _showBackdrop = true;
-        await InvokeAsync(StateHasChanged);
-    }
-
-    public async Task Close()
-    {
-        _modalDisplay = "none";
-        _modalClass = string.Empty;
-        _showBackdrop = false;
-        await InvokeAsync(StateHasChanged);
-    }
 }
 
 
