--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
@@ -5,4 +5,4 @@
 
 <h3>Dialog Examples Handling 1 and 2</h3>
 
-<AxoDialogLocator DialogLocatorId="dialog2" ObservedObjects="new [] {Entry.Plc.Dialogs_1, Entry.Plc.Dialogs_2}"></AxoDialogLocator>
+<AxoDialogLocator DialogLocatorId="dialog2" ObservedObjects="new [] { Entry.Plc.D_222}"></AxoDialogLocator>
