--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
@@ -11,6 +11,7 @@
         @RenderDialogIcon()
     </div>
 
+    <p>@Component.Symbol</p>
     <p>@Component._text.Cyclic</p>
 
     <div class="d-flex justify-content-center ">
