--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesControl_1.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesControl_1.razor
@@ -5,18 +5,25 @@
 
 <h3>AxoDailogs Control</h3>
 
-<RenderableContentControl Context="@Entry.Plc.Dialogs_1._invokeRestoreAll" Presentation="Control"/>
-<RenderableContentControl Context="@Entry.Plc.Dialogs_1._invokeCallAll" Presentation="Control"/>
-<RenderableContentControl Context="@Entry.Plc.Dialogs_1._invokeSequnceAll" Presentation="Control"/>
+<RenderableContentControl Context="@Entry.Plc.D_111._invokeRestoreAll" Presentation="Control"/>
+<RenderableContentControl Context="@Entry.Plc.D_111._invokeCallAll" Presentation="Control" />
+<RenderableContentControl Context="@Entry.Plc.D_111._invokeSequnceAll" Presentation="Control" />
 
 <div style="display: flex; justify-content: space-around;">
     <div>
-        <h3>--------------- dialog 1 ------------</h3>
-        <RenderableContentControl Context="@Entry.Plc.Dialogs_1._dailogTest_1" Presentation="Control" />
+        <h3>--------------- AA ------------</h3>
+        <RenderableContentControl Context="@Entry.Plc.D_111.AA" Presentation="Control" />
     </div>
-
     <div>
-        <h3>--------------- dialog 2 ------------</h3>
-        <RenderableContentControl Context="@Entry.Plc.Dialogs_1._dailogTest_2" Presentation="Control" />
+        <h3>--------------- BB ------------</h3>
+        <RenderableContentControl Context="@Entry.Plc.D_111.BB" Presentation="Control" />
+    </div>
+    <div>
+        <h3>--------------- CC ------------</h3>
+        <RenderableContentControl Context="@Entry.Plc.D_111.CC" Presentation="Control" />
+    </div>
+    <div>
+        <h3>--------------- DD ------------</h3>
+        <RenderableContentControl Context="@Entry.Plc.D_111.DD" Presentation="Control" />
     </div>
 </div>
