--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
@@ -80,6 +80,18 @@
                                     <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PresentationTemplate">
                                 </div>
                             </div>
+                            <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">X</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PosX">
+                                </div>
+                            </div>
+                            <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">Y</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PosY">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
