--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -1,9 +1,14 @@
 ﻿@using AXSharp.Connector
 @using AXOpen.Core
+@using AXOpen.VisualComposer;
 @inherits RenderableComplexComponentBase<axosimple.IUnit>
 
 <body>
+<h1>@Component.AttributeName</h1>
 <div class="content-wrapper">
+    <div>
+        <VisualComposerContainer Width="1000px" Height="500px" Objects="@AllVisualItems" Id="@Component.Symbol"></VisualComposerContainer>
+    </div>
     <UnitsSequences Component="@this.Component" ObjectCollection=AllVisualItems></UnitsSequences>
     <UnitsService ServiceTask="((dynamic)this.Component).ServiceMode" Components="AllVisualItems"></UnitsService>
 </div>
