--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
@@ -5,4 +5,4 @@
 
 <h3>Dialog Examples Handling</h3>
 
-<AxoDialogLocator DialogLocatorId="dialog1" ObservedObjects="new[] {Entry.Plc.D_111}"></AxoDialogLocator>
+<AxoDialogLocator DialogLocatorPath="dialog1" ObservedObjects="new[] {Entry.Plc.D_111}"></AxoDialogLocator>
