fixing name of dialogHub, LocatarPath

--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Documentation.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Documentation.razor
@@ -46,7 +46,7 @@
 <RenderableContentControl Context="@Entry.Plc.documentation._automat._inspectionData" Presentation="Command-Control" PollingInterval="100" />
 
 
-<AxoDialogLocator DialogId="custation001" ObservedObjects="new[] {Entry.Plc.documentation._automat}" />
+<AxoDialogLocator DialogLocatorPath="custation001" ObservedObjects="new[] {Entry.Plc.documentation._automat}" />
 
 @code
 {
