--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
@@ -4,14 +4,15 @@
 @inherits AxoDialogBaseView<AxoInspectorDialog>
 @inject AuthenticationStateProvider _asp
 
-@* <h3>AxoInspectorDialogDialogView</h3> *@
 
-<ModalDialog @ref="@base.ModalDialog" >
-    <HeaderTemplate>
-        <h3>Inspection failed, you will need to decide what's next...</h3>
-    </HeaderTemplate>
-    <BodyTemplate>
-    <div >
+<div class="border border-2 rounded">
+   
+    <h3>Inspection failed, you will need to decide what's next...</h3>
+    <p>@Component.Symbol</p>
+
+    <div class="d-flex justify-content-center ">
+
+        <div>
 
             <h5>@Description</h5>
             @if (Inspector != null)
@@ -22,7 +23,7 @@
             {
                 <p>Loading inspector... if it's taking long, something is wrong</p>
             }
-     
+
         </div>
         <div class="d-flex justify-content-center ">
             <button type="button" class="btn btn-secondary m-2 w-50" disabled="@RetryDisabled" @onclick="Retry">Retry</button>
@@ -31,8 +32,17 @@
 
             <button type="button" class="btn btn-secondary m-2 w-50" @onclick="Override">Override</button>
         </div>
-    </BodyTemplate>
-</ModalDialog>
+
+    </div>
+    <div>
+
+        @if (!_asp.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
+        {
+            <p>You are not authorized, please <a href="Identity/Account/Login">Log In</a>.</p>
+        }
+
+    </div>
+</div>
 
 
 
