--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -133,6 +133,6 @@
     </button>
 </div>
 
-<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator DialogId="@this.Component?.Symbol" ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
+<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator DialogLocatorPath="="@this.Component?.Symbol" ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
 <AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {this.Component}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
 
