--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -7,7 +7,7 @@
 <h1>@Component.AttributeName</h1>
 <div class="content-wrapper">
     <div>
-        <VisualComposerContainer Width="1000px" Height="500px" Objects="@AllVisualItems" Id="@Component.Symbol"></VisualComposerContainer>
+        <VisualComposerContainer Objects="@AllVisualItems" Id="@Component.Symbol"></VisualComposerContainer>
     </div>
     <UnitsSequences Component="@this.Component" ObjectCollection=AllVisualItems></UnitsSequences>
     <UnitsService ServiceTask="((dynamic)this.Component).ServiceMode" Components="AllVisualItems"></UnitsService>
