--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
@@ -2,27 +2,38 @@
 
 @if (_dialogProxyService?.DisplayedDialogs.Count() > 0)
 {
-    @if (ShowBackdrop)
+    @if (DisplayInModalWindow)
     {
-        <div class="modal-backdrop fade show"></div>
-    }
+        @if (ShowBackdrop)
+        {
+            <div class="modal-backdrop fade show"></div>
+        }
 
-    <div class="modal modal-xl @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay; overflow-y: auto; ">
-        <div class="modal-dialog mw-100 w-75 modal-dialog-centered" style="align-items: flex-end;" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1>THOSE DIALOGS NEEDS TO DECIDE FLOW</h1>
+        <div class="modal modal-xl @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay; overflow-y: auto; ">
+            <div class="modal-dialog mw-300 mh-50 modal-dialog-centered" style="align-items: flex-start;" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4>YOU NEEDS TO DECIDE: </h4>
+                        <a href="Identity/Account/Login">Log In</a>
 
-                </div>
-                <div class="modal-body">
-                    @foreach (var dialogInstance in _dialogProxyService?.DisplayedDialogs)
-                    {
-                        <RenderableContentControl Context="@dialogInstance" Presentation="Dialog" />
-                    }
+                    </div>
+                    <div class="modal-body">
+                        @foreach (var dialogInstance in _dialogProxyService?.DisplayedDialogs)
+                        {
+                            <RenderableContentControl Context="@dialogInstance" Presentation="Dialog" />
+                        }
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    }
+    else
+    {
+        @foreach (var dialogInstance in _dialogProxyService?.DisplayedDialogs)
+        {
+            <RenderableContentControl Context="@dialogInstance" Presentation="Dialog" />
+        }
+    }
 }
 
 
