--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogDialogView/AxoDialogDialogView.razor
@@ -5,34 +5,36 @@
 @inject AuthenticationStateProvider _asp
 
 <div class="border border-2 rounded">
-    <div class="d-flex align-items-center justify-content-center">
+    <div class="d-flex align-items-center justify-content-center" title="@Component.Symbol">
         @RenderDialogIcon()
-        <h2 class="modal-title m-2">@Component._caption.Cyclic</h2>
+        <h3 class="title m-2">@PlcLocalizer[Component._caption.Cyclic]</h3>
         @RenderDialogIcon()
     </div>
 
-    <p>@Component.Symbol</p>
-    <p>@Component._text.Cyclic</p>
+    <div class="d-flex justify-content-center ">
+        <h3 class="title m-2">@PlcLocalizer[@Component._text.Cyclic]</h3>
+    </div>
 
     <div class="d-flex justify-content-center ">
 
         @if (IsOkDialogType())
         {
-            <button type="button" class="btn btn-primary m-2 w-50" disabled=@ButtonDisabled() @onclick="DialogAnswerOk">Ok</button>
+            <button type="button" class="btn btn-primary m-2 w-50" disabled=@ButtonDisabled() @onclick="DialogAnswerOk">@Localizer["Ok"]</button>
 
         }
         @if (IsYesNoDialogType() || IsYesNoCancelDialogType())
         {
-            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerYes" disabled=@ButtonDisabled()>Yes</button>
-            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerNo" disabled=@ButtonDisabled()>No</button>
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerYes" disabled=@ButtonDisabled()>@Localizer["Yes"]</button>
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerNo" disabled=@ButtonDisabled()>@Localizer["No"]</button>
         }
 
         @if (IsYesNoCancelDialogType())
         {
-            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerCancel" disabled=@ButtonDisabled()>Cancel</button>
+            <button type="button" class="btn btn-primary m-2 w-50" @onclick="DialogAnswerCancel" disabled=@ButtonDisabled()>@Localizer["Cancel"]</button>
         }
 
     </div>
+
 </div>
 
 
