--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
@@ -10,11 +10,11 @@
         }
 
         <div class="modal modal-xl @ModalClass" tabindex="-1" role="dialog" style="display:@ModalDisplay; overflow-y: auto; ">
-            <div class="modal-dialog mw-300 mh-50 modal-dialog-centered" style="align-items: flex-start;" role="document">
+            <div class="modal-dialog mw-100 w-75 modal-dialog-centered" style="align-items: flex-start;" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4>YOU NEEDS TO DECIDE: </h4>
-                        <a href="Identity/Account/Login">Log In</a>
+                        <h4>@Localizer["Make a Choice"]</h4>
+                        <a href="Identity/Account/Login">@Localizer["Log in"]</a>
 
                     </div>
                     <div class="modal-body">
