--- a/src/core/src/AXOpen.Core.Blazor/_Imports.razor
+++ b/src/core/src/AXOpen.Core.Blazor/_Imports.razor
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.Extensions.Localization
+@using System.Globalization
+@using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using AXOpen.Base.Dialogs;
 @using AXOpen.Core.Blazor.Properties
 @using AXOpen.Core.Resources
-@using Microsoft.Extensions.Localization
 
 @inject IStringLocalizer<AxOpenCoreResources> Localizer
 @inject IStringLocalizer<PlcStringResources> PlcLocalizer
