--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
@@ -6,3 +6,5 @@
 <h3>Dialog Examples Handling 1 and 2</h3>
 
 <AxoDialogLocator DialogLocatorPath="dialog2" DisplayInModalWindow="false" ObservedObjects="new [] { Entry.Plc.D_222, Entry.Plc.D_111}"></AxoDialogLocator>
+
+<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator DialogLocatorPath="AlertDialog2" DisplayInModalWindow="false" ObservedObjects="new [] { Entry.Plc.D_222, Entry.Plc.D_111}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
