--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -3,8 +3,14 @@
 @using AXOpen.VisualComposer;
 @inherits RenderableComplexComponentBase<axosimple.IUnit>
 
+
 <body>
-<h1>@Component.AttributeName</h1>
+<div class="rotate-text" style=".rotate-text {
+                                            transform: rotate(45deg); /* Adjust the angle as needed */
+                                            /* Additional styling as needed */
+                                        }">
+    <h1>@Component.AttributeName</h1>
+</div>
 <div class="content-wrapper">
     <div>
         <VisualComposerContainer Objects="@AllVisualItems" Id="@Component.Symbol"></VisualComposerContainer>
