--- a/src/templates.simple/axpansion/server/Components/UnitsService.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitsService.razor
@@ -10,7 +10,7 @@
     <div class="row p-3">
         @if (ServiceTask?.Status.Cyclic == (ushort)eAxoTaskState.Busy)
         {
-            <VisualComposerContainer Objects="Components" Id="ServiceComposer" />
+            <VisualComposerContainer Objects="Components" Id="@ServiceTask.Symbol" />
             @* <RenderableContentControl Context="Components" Presentation="Command-Control"/> *@
         }
     </div>
