--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/MainLayout.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/MainLayout.razor
@@ -17,7 +17,7 @@
             @Body
         </article>
 
-        <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
+        <AXOpen.Core.Blazor.AxoAlertDialog.AxoAlertToast />
 
     </main>
 </div>
