--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
@@ -6,4 +6,5 @@
 <h3>Dialog Examples Handling</h3>
 
 <AxoDialogLocator DialogLocatorPath="dialog1" ObservedObjects="new[] {Entry.Plc.D_111}"></AxoDialogLocator>
-<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new [] { Entry.Plc.D_222, Entry.Plc.D_111}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
+
+<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator IsScoped="false" ObservedObjects="new [] {Entry.Plc.D_111}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
