--- a/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Shared/NavMenu.razor
@@ -19,17 +19,11 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="DialogExamplesControl_1">
-                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Control 1
+            <NavLink class="nav-link" href="DialogExamplesControl">
+                <span class="oi oi-plus" aria-hidden="true"></span> Dialogs Control
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="DialogExamplesControl_2">
-                <span class="oi oi-plus" aria-hidden="true"></span> Dialog Control 2
-            </NavLink>
-        </div>
-
-
+     
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="DialogExamplesHandling_1">
                 <span class="oi oi-plus" aria-hidden="true"></span> Dialog Handling 1
