--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
@@ -5,7 +5,9 @@
 @using AXOpen.Core.Blazor.AxoDialogs;
 @using AXSharp.Connector;
 
-@if (IsScoped)
+
+
+@* @if (IsScoped)
 {
     <AxoAlertToast ParameterDialogService="AlertDialogService"/>
-}
+} *@
