--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_2.razor
@@ -7,4 +7,4 @@
 
 <AxoDialogLocator DialogLocatorPath="dialog2" DisplayInModalWindow="false" ObservedObjects="new [] { Entry.Plc.D_222, Entry.Plc.D_111}"></AxoDialogLocator>
 
-<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator IsScoped="false" ObservedObjects="new [] { Entry.Plc.D_222}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
+<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new [] { Entry.Plc.D_222}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
