Direct IO addresse replaced by HwId

--- a/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
@@ -1,4 +1,36 @@
 ﻿@page "/Component_1"
 @using AXOpen.Core;
 
-<RenderableContentControl Context="@Entry.Plc.documentation.componentOne" Presentation="Command-Control" />
+<button class="btn btn-outline-primary" @onclick="WriteTaskTimesToConsole">Write times to console</button>
+
+@code
+{
+    #region WriteTaskDurationToConsole
+    private async Task WriteTaskTimesToConsole()
+    {
+        await Entry.Plc.documentation.componentOne.AxoCmmtAs.WriteTaskDurationToConsole();
+    }
+    #endregion
+
+    #region PartialExtensionExample
+    // No partial extension example available.
+    #endregion
+    
+}
+
+<!-- <GenericComponentStatusView> -->
+ <AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAs" /> 
+<!-- </GenericComponentStatusView> -->
+
+<!-- <GenericComponentCommandView> -->
+ <AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoCmmtAs" /> 
+<!-- </GenericComponentCommandView> -->
+
+<!-- <RccComponentStatusView> -->
+ <RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAs" Presentation="Status-Display" /> 
+<!-- </RccComponentStatusView> -->
+
+
+<!-- <RccComponentCommandView> -->
+<RenderableContentControl Context="@Entry.Plc.documentation.componentOne.AxoCmmtAs" Presentation="Command-Control" />
+<!-- </RccComponentCommandView> -->
