--- a/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
+++ b/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="documentation">
+                <span class="oi oi-plus" aria-hidden="true"></span> Documentation
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="security">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Security
             </NavLink>
